--- a/notebooks/task1_eda.ipynb
+++ b/notebooks/task1_eda.ipynb
@@ -234,6 +234,114 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Publisher and Stock Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Top 10 most frequently mentioned Stock Symbols:\n",
+      "stock\n",
+      "A        10\n",
+      "NI       10\n",
+      "NRIM     10\n",
+      "NRG      10\n",
+      "NRF      10\n",
+      "NRCIB    10\n",
+      "NRCIA    10\n",
+      "NR       10\n",
+      "NPV      10\n",
+      "NPTN     10\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Distribution of Top 5 Stocks by Top 5 Publishers:\n",
+      "stock              A  NI  NRF  NRG  NRIM\n",
+      "publisher                               \n",
+      "Benzinga Newsdesk  1   4    0    2     6\n",
+      "Benzinga Newsdesk  0   0    0    1     0\n",
+      "Lisa Levin         3   2    0    2     4\n",
+      "Paul Quintaro      0   0    8    0     0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Articles per stock symbol (focus on top 10)\n",
+    "stock_counts = df['stock'].value_counts()\n",
+    "print(\"\\nTop 10 most frequently mentioned Stock Symbols:\")\n",
+    "print(stock_counts.head(10))\n",
+    "\n",
+    "# Cross-analysis: Top publishers and top stocks (optional, but insightful)\n",
+    "top_publishers = df['publisher'].value_counts().head(5).index.tolist()\n",
+    "top_stocks = df['stock'].value_counts().head(5).index.tolist()\n",
+    "\n",
+    "print(\"\\nDistribution of Top 5 Stocks by Top 5 Publishers:\")\n",
+    "# Create a pivot table for the intersection\n",
+    "publisher_stock_matrix = df[df['publisher'].isin(top_publishers) & df['stock'].isin(top_stocks)].pivot_table(\n",
+    "    index='publisher', \n",
+    "    columns='stock', \n",
+    "    aggfunc='size', \n",
+    "    fill_value=0\n",
+    ")\n",
+    "print(publisher_stock_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Top 10 most frequent Publisher Domains:\n",
+      "publisher_domain\n",
+      "benzinga newsdesk    14750\n",
+      "lisa levin           12408\n",
+      "etf professor         4362\n",
+      "paul quintaro         4212\n",
+      "benzinga newsdesk     3177\n",
+      "benzinga insights     2332\n",
+      "vick meyer            2128\n",
+      "charles gross         1790\n",
+      "hal lindon            1470\n",
+      "benzinga_newsdesk     1239\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function to extract the domain name\n",
+    "def extract_domain(publisher_name):\n",
+    "    publisher_name = str(publisher_name).lower()\n",
+    "    \n",
+    "    # 1. Check for email format\n",
+    "    if '@' in publisher_name:\n",
+    "        return publisher_name.split('@')[-1]\n",
+    "    # 2. Check for URL format (simple extraction)\n",
+    "    elif '.' in publisher_name:\n",
+    "        match = re.search(r'[\\w\\-]+\\.[\\w]+$', publisher_name)\n",
+    "        return match.group(0) if match else publisher_name\n",
+    "    return publisher_name # Return original if no clear domain/email format\n",
+    "\n",
+    "df['publisher_domain'] = df['publisher'].apply(extract_domain)\n",
+    "\n",
+    "print(\"\\nTop 10 most frequent Publisher Domains:\")\n",
+    "print(df['publisher_domain'].value_counts().head(10))"
+   ]
   }
  ],
  "metadata": {
