--- a/notebooks/task3_correlation_analysis.ipynb
+++ b/notebooks/task3_correlation_analysis.ipynb
@@ -338,6 +338,112 @@
     "print(\"Merged data sample:\")\n",
     "print(merged_data.head(10))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== MERGING DATASETS ===\n",
+      "\n",
+      "Merged dataset size: 251\n",
+      "Merged data sample:\n",
+      "    date_only  sentiment_vader_mean  article_count  sentiment_textblob_mean  \\\n",
+      "0  2019-06-13                0.1178             19                   0.1382   \n",
+      "1  2019-06-14                0.1229             27                   0.1623   \n",
+      "2  2019-06-17                0.1595             13                   0.0881   \n",
+      "3  2019-06-18                0.1441             18                   0.1132   \n",
+      "4  2019-06-19                0.1417             19                   0.0887   \n",
+      "\n",
+      "   daily_return  daily_return_pct      Close  \n",
+      "0     -0.009676         -0.967646  64.660477  \n",
+      "1      0.005221          0.522125  64.998085  \n",
+      "2      0.006282          0.628176  65.406387  \n",
+      "3      0.014286          1.428575  66.340767  \n",
+      "4      0.010297          1.029715  67.023888  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 7: Merge Sentiment with Stock Returns (Redo)\n",
+    "print(\"\\n=== MERGING DATASETS ===\\n\")\n",
+    "\n",
+    "# Group news by date and calculate average daily sentiment\n",
+    "daily_sentiment = df_news.groupby('date_only').agg({\n",
+    "    'sentiment_vader': ['mean', 'count'],\n",
+    "    'sentiment_textblob': 'mean'\n",
+    "}).round(4)\n",
+    "\n",
+    "# Flatten column names\n",
+    "daily_sentiment.columns = ['sentiment_vader_mean', 'article_count', 'sentiment_textblob_mean']\n",
+    "daily_sentiment = daily_sentiment.reset_index()\n",
+    "\n",
+    "# Merge sentiment with stock returns\n",
+    "merged_data = pd.merge(\n",
+    "    daily_sentiment,\n",
+    "    stock_data_clean[['date_only', 'daily_return', 'daily_return_pct', 'Close']],\n",
+    "    on='date_only',\n",
+    "    how='inner'\n",
+    ")\n",
+    "\n",
+    "print(f\"Merged dataset size: {len(merged_data)}\")\n",
+    "print(\"Merged data sample:\")\n",
+    "print(merged_data.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== CORRELATION ANALYSIS ===\n",
+      "\n",
+      "PEARSON CORRELATION RESULTS:\n",
+      "VADER Sentiment vs Daily Returns: 0.1763\n",
+      "TextBlob Sentiment vs Daily Returns: 0.0852\n",
+      "\n",
+      "Correlation Strength (VADER): Very Weak\n",
+      "Correlation Strength (TextBlob): Very Weak\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 8: Correlation Analysis\n",
+    "print(\"\\n=== CORRELATION ANALYSIS ===\\n\")\n",
+    "\n",
+    "# Calculate Pearson correlation\n",
+    "corr_vader = pearsonr(merged_data['sentiment_vader_mean'], merged_data['daily_return'])[0]\n",
+    "corr_textblob = pearsonr(merged_data['sentiment_textblob_mean'], merged_data['daily_return'])[0]\n",
+    "\n",
+    "print(\"PEARSON CORRELATION RESULTS:\")\n",
+    "print(f\"VADER Sentiment vs Daily Returns: {corr_vader:.4f}\")\n",
+    "print(f\"TextBlob Sentiment vs Daily Returns: {corr_textblob:.4f}\")\n",
+    "\n",
+    "# Interpret correlation strength\n",
+    "def interpret_correlation(corr):\n",
+    "    abs_corr = abs(corr)\n",
+    "    if abs_corr >= 0.7:\n",
+    "        return \"Strong\"\n",
+    "    elif abs_corr >= 0.5:\n",
+    "        return \"Moderate\" \n",
+    "    elif abs_corr >= 0.3:\n",
+    "        return \"Weak\"\n",
+    "    else:\n",
+    "        return \"Very Weak\"\n",
+    "\n",
+    "print(f\"\\nCorrelation Strength (VADER): {interpret_correlation(corr_vader)}\")\n",
+    "print(f\"Correlation Strength (TextBlob): {interpret_correlation(corr_textblob)}\")"
+   ]
   }
  ],
  "metadata": {
